--- a/Estrutura de dados/Estrutura de dados.csproj
+++ b/Estrutura de dados/Estrutura de dados.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\scripts\LDE.cs" />
+    <Compile Include="Assets\scripts\ListPushAndPull.cs" />
     <Compile Include="Assets\scripts\MainMenuNavigator.cs" />
     <Compile Include="Assets\scripts\MakeAPush.cs" />
     <Compile Include="Assets\scripts\MoveCamera.cs" />
