--- a/Estrutura de dados/Estrutura de dados.csproj
+++ b/Estrutura de dados/Estrutura de dados.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Assets\scripts\Queue.cs" />
     <Compile Include="Assets\scripts\QueuePainel.cs" />
     <Compile Include="Assets\scripts\SetTextValue.cs" />
+    <Compile Include="Assets\scripts\SpinRightRound.cs" />
     <Compile Include="Assets\scripts\Stack.cs" />
     <Compile Include="Assets\scripts\showInputField.cs" />
   </ItemGroup>
