--- a/Estrutura de dados/Estrutura de dados.csproj
+++ b/Estrutura de dados/Estrutura de dados.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Assets\scripts\SearchList.cs" />
     <Compile Include="Assets\scripts\SpinRightRound.cs" />
     <Compile Include="Assets\scripts\Stack.cs" />
+    <Compile Include="Assets\scripts\TreeInsert.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
